# lib-maker

./: README.md  bootstrap.py  requirements.txt  setup.cfg  templates.py
libmaker/: __init__.py  __main__.py  templates.py
tests/: test_makeit.py
