[metadata]
name = lib-maker
version = 0.1.0
description = Project to help create the skeleton of other projects
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/
author = Brian Buxton
author_email = bbux-dev@gmal.com
license = MIT
license_file = LICENSE

[options]
packages = find:

install_requires =
    jinja2
[options.entry_points]
console_scripts =
    mklib = libmaker.__main__:main

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s